--- a/saveasapp/manifest.json
+++ b/saveasapp/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Save As Web App",
     "short_name": "SaveAs",
-    "start_url": "index.html",
+    "start_url": "redirect.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007bff",
