--- a/firstc/snake-c-app/Makefile
+++ b/firstc/snake-c-app/Makefile
@@ -1,21 +1,14 @@
-CC=gcc
-CFLAGS=-I./src -Wall -Wextra
-SRC=src/main.c src/snake.c src/input.c
-OBJ=$(SRC:.c=.o)
-EXEC=snake
+CC = gcc
+CFLAGS = -I./src -Wall -Wextra
+SRC = src/main.c src/snake.c src/input.c
+OBJ = $(SRC:.c=.o)
+EXEC = snake
 
-all: $(EXEC)
-
-$(EXEC): $(OBJ)
-	$(CC) -o $@ $^
-
-%.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
-CC=gcc
-CFLAGS=-I./src -Wall -Wextra
-SRC=src/main.c src/snake.c src/input.c
-OBJ=$(SRC:.c=.o)
-EXEC=snake
+ifeq ($(OS),Windows_NT)
+    RM = del /Q
+else
+    RM = rm -f
+endif
 
 all: $(EXEC)
 
@@ -26,4 +19,4 @@ $(EXEC): $(OBJ)
     $(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-    rm -f $(OBJ) $(EXEC)
+    $(RM) $(OBJ) $(EXEC)
